--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="container wrap">
             <a href="./index.html" class="logo"><img loading="lazy" src="img/logo.svg" alt="logo"></a>
             <nav class="wrap">
-                <a href="#" class="is__active" target="_blank">Strategy</a>
-                <a href="#" target="_blank">Lend</a>
-                <a href="#" target="_blank">Your Position</a>
+                <a href="./index.html" class="is__active">Strategy</a>
+                <a href="./lending.html">Lend</a>
+                <a href="./position.html">Your Position</a>
                 <hr>
-                <a href="#" target="_blank">Analytics</a>
-                <a href="#" target="_blank">Leaderboard</a>
+                <a href="#">Analytics</a>
+                <a href="./leaderboard.html">Leaderboard</a>
             </nav>
             <img src="img/arbitrum.svg" class="header__icon" alt="i">
-            <a href="#" target="_blank" class="btn btn_outline">Connect Wallet</a>
+            <a href="#" class="btn btn_outline">Connect Wallet</a>
             <button class="btn-menu"> <span></span></button>
         </div>
     </header>
@@ -41,7 +41,7 @@
             <div class="tab-btns">
                 <button data-filter="1" class="tab__btn is__active">🔎 All</button>
                 <button data-filter="2" class="tab__btn">🔥 Hot</button>
-                <button data-filter="3" class="tab__btn">🔖 Bookmark</button>
+                <!-- <button data-filter="3" class="tab__btn">🔖 Bookmark</button> -->
                 <button data-filter="4" class="tab__btn"><img src="img/penpie.svg" alt="i"> penpie</button>
                 <button data-filter="5" class="tab__btn"><img src="img/camelot.svg" alt="i"> Camelot</button>
                 <button data-filter="6" class="tab__btn"><img src="img/traderjoe.svg" alt="i"> Trader Joe V2</button>
@@ -986,7 +986,6 @@
 
 
     <script src="./js/jquery-3.4.1.min.js" defer></script>
-    <script src="./js/slick.min.js" defer></script>
     <script src="./js/scripts.js" defer></script>
 
 </body>
