--- a/lending.html
+++ b/lending.html
@@ -18,12 +18,12 @@
         <div class="container wrap">
             <a href="./index.html" class="logo"><img loading="lazy" src="img/logo.svg" alt="logo"></a>
             <nav class="wrap">
-                <a href="#" class="is__active" target="_blank">Strategy</a>
-                <a href="#" target="_blank">Lend</a>
-                <a href="#" target="_blank">Your Position</a>
+                <a href="./index.html">Strategy</a>
+                <a href="./lending.html" class="is__active">Lend</a>
+                <a href="./position.html">Your Position</a>
                 <hr>
-                <a href="#" target="_blank">Analytics</a>
-                <a href="#" target="_blank">Leaderboard</a>
+                <a href="#">Analytics</a>
+                <a href="./leaderboard.html">Leaderboard</a>
             </nav>
             <img src="img/arbitrum.svg" class="header__icon" alt="i">
             <a href="#" target="_blank" class="btn btn_outline">Connect Wallet</a>
@@ -35,7 +35,7 @@
         <div class="container">
             <h1 class="h5">Lending Pools</h1>
 
-            <div class="MuiStack-root css-b9w1u9">
+            <div class="MuiStack-root main-headline css-b9w1u9">
                 <div class="MuiStack-root css-x97obs">
                     <h6 class="MuiTypography-root MuiTypography-subtitle1 css-1q9qcw5">Asset</h6>
                 </div>
@@ -144,8 +144,7 @@
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x0c...c9e8" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
-                                src="img/pindle.svg"
-                                style="color: transparent;">
+                                src="img/pindle.svg" style="color: transparent;">
                             <p class="MuiTypography-root MuiTypography-body1 css-vvufw5">PENDLE</p>
                         </div>
                         <div class="MuiStack-root css-rurlj0">
@@ -198,8 +197,7 @@
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x91...6548" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
-                                src="img/arb.svg"
-                                style="color: transparent;">
+                                src="img/arb.svg" style="color: transparent;">
                             <p class="MuiTypography-root MuiTypography-body1 css-vvufw5">ARB</p>
                         </div>
                         <div class="MuiStack-root css-rurlj0">
@@ -247,7 +245,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0xff970a61a04b1ca14834a43f5de4533ebddb5cc8?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0xff...5cc8" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -300,7 +299,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x4cb9a7ae498cedcbb5eae9f25736ae7d428c9d66?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x4c...9d66" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -353,7 +353,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0xfd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0xfd...cbb9" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -406,7 +407,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0xaf88d065e77c8cc2239327c5edb3a432268e5831?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0xaf...5831" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -459,7 +461,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x3082cc23568ea640225c2467653db90e9250aaa0?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x30...aaa0" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -512,7 +515,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x371c7ec6d8039ff7933a2aa28eb827ffe1f52f07?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x37...2f07" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -565,7 +569,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0xfc5a1a6eb076a2c7ad06ed22c90d7e710e35ad0a?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0xfc...ad0a" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -618,7 +623,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x83d6c8c06ac276465e4c92e7ac8c23740f435140?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x83...5140" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -671,7 +677,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x2f2a2543b76a4166549f7aab2e75bef0aefc5b0f?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x2f...5b0f" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -724,7 +731,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x51318b7d00db7acc4026c88c3952b66278b6a67f?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x51...a67f" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -777,7 +785,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x93b346b6bc2548da6a1e7d98e9a421b42541425b?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x93...425b" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -830,7 +839,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x3d9907f9a368ad0a51be60f7da3b97cf940982d8?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x3d...82d8" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -883,7 +893,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x0341c0c0ec423328621788d4854119b97f44e391?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x03...e391" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -936,7 +947,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x58b9cb810a68a7f3e1e4f8cb45d1b9b3c79705e8?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x58...05e8" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -989,7 +1001,8 @@
                         </div>
                         <div class="MuiStack-root css-hpwt1"></div>
                     </div>
-                </a><a class="css-1fn1rmh" href="/lending/0x539bde0d7dbd336b79148aa742883198bbf60342?action=deposit">
+                </a>
+                <a class="css-1fn1rmh" href="#">
                     <div class="MuiStack-root css-us2jy7">
                         <div class="MuiStack-root css-1hdfonc"><img alt="token-image-0x53...0342" loading="lazy"
                                 width="32" height="32" decoding="async" data-nimg="1" class="css-1i8k1gd"
@@ -1075,10 +1088,7 @@
         </div>
     </div>
 
-
-
     <script src="./js/jquery-3.4.1.min.js" defer></script>
-    <script src="./js/slick.min.js" defer></script>
     <script src="./js/scripts.js" defer></script>
 
 </body>
